Fix logos marquees on mobile

--- a/docs/.vitepress/theme/assets/css/home.css
+++ b/docs/.vitepress/theme/assets/css/home.css
@@ -17,6 +17,6 @@
 }
 
 .marquee-gradients {
-  @apply before:absolute before:inset-y-0 before:left-0 before:w-16 before:z-10 before:bg-gradient-to-r before:from-night before:to-transparent;
-  @apply after:absolute after:inset-y-0 after:right-0 after:w-16 after:z-10 after:bg-gradient-to-l after:from-night after:to-transparent;
+  @apply before:absolute before:inset-y-0 before:-left-px before:w-16 before:z-10 before:bg-gradient-to-r before:from-night before:to-transparent;
+  @apply after:absolute after:inset-y-0 after:-right-px after:w-16 after:z-10 after:bg-gradient-to-l after:from-night after:to-transparent;
 }
